# layout_design

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: slow.yml  test.yml
app/: __init__.py  cli.py  config_loader.py  paths.py  runtime.py
app/PYTHON/: __init__.py
app/layout/: README.md  __init__.py  synthesize.py  terminal_truncate.py  visualize.py
app/pipeline/: __init__.py  run.py
app/polish/: README.md  __init__.py  phase2_profile.py  run.py
app/postprocess/: README.md  __init__.py  cnc_work_pose.py  convert_gcode.py  electrode_finder.py  export_bundle.py  export_matlab.py  export_matlab_legacy.py  mesh_export.py  mesh_normals.py  print_config.py  record_pm.py  smooth.py  validate_export.py
app/preprocess/: README.md  __init__.py  fiducials_io.py  mesh_io.py  reconstruct.py  run.py
app/simulator/: __init__.py  cli.py  parser.py  viewer.py
config/: README.md  defaults.yaml
config/postprocessor/: README.md  (+1 more)
data/: README.md
docs/: ARCHITECTURE.md  CLI.md  DATA_LAYOUT.md  GETTING_STARTED.md  GOAL.md  MACHINE_KINEMATICS.md  MIGRATION.md  PIPELINE.md  REMOVED_MODULES.md  STATUS.md
legacy_gcode_examples/: README.md
scripts/: README.md  copy_sample_data.ps1  init_data_tree.ps1  mach4_work_pose_publisher.lua  make_nsf_figures.py
tests/: README.md  test_bundle_contract.py  test_bundle_mat_parity.py  test_config_loader.py  test_electrode_finder.py  test_export_bundle.py  test_integration_stage_d.py  test_mesh_io.py  test_paths.py  test_pipeline_run.py  test_print_config.py  test_resolve_mesh_file.py  test_validate_export.py
(+88 files in other folders)
