[project]
name = "layout-design"
version = "0.1.0"
description = "Generate per-subject EEG wire layouts from terminal assignment maps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "open3d",
    "pyvista",
    "shapely",
    "matplotlib",
    "mne",
    "pyyaml",
]

[project.scripts]
layout = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["app/PYTHON"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: real-mesh export (minutes); excluded from default CI",
]
addopts = "-m 'not slow'"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
